fix z-index on header

--- a/src/components/Header/UserAuth/UserAuth.module.css
+++ b/src/components/Header/UserAuth/UserAuth.module.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  z-index: 100;
 }
 
 .link:hover {
